--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '2'
 services:
   dam:
     container_name: dam
-    restart: always
-    build: 
+    build:
       context: .
       args: 
         - PROXY
@@ -23,3 +22,12 @@ services:
       - PASSWORD_COOKIE
     ports: 
       - $PORT:8080
+    mem_limit: 1g
+    logging: 
+      driver: 'fluentd'
+      options: 
+        fluentd-async-connect: "true"
+        fluentd-address: $HOST:24224
+        tag: docker.seo
+    network_mode: bridge
+    restart: always
