--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "live-server public/",
     "build:webpack": "webpack -p --env production",
     "build": "tsc && webpack -p --env production && webpack --config webUI.config.js && webpack --config webUISetup.config.js",
-    "build:docker": "export NODE_OPTIONS=--max_old_space_size=8000 && tsc && webpack -p --env production && webpack --config webUI.config.js && webpack --config webUISetup.config.js",
+    "build:docker": "tsc && webpack -p --env production && webpack --config webUI.config.js && webpack --config webUISetup.config.js",
     "build:webUI": "webpack --config webUI.config.js",
     "build:dev": "tsc && webpack --env development",
     "build:test": "tsc && webpack --env test",
