--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,11 @@ deploy to test:
     tags:
         - urt-web-app1-for-web-gr
     variables:
+        HOST: $TEST_HOST
         NODE_ENV: test
         DB_TYPE: fs
         DOCKER: "true"
+        FS_DIRECTORY: "files/"
         DISABLE_EMAIL_VERIFICATION: "true"
         DISABLE_STORAGE: "true"
         MONGODB_URL: $TEST_MONGO_URI
@@ -37,10 +39,11 @@ deploy to prod:
     tags:
         - uhp-web-app1-for-web-gr
     variables:
-        REMOTE_URL: https://api-app2.sovcombank.ru/v2/app
+        REMOTE_URL: https://api-app2.sovcombank.ru/v2/app # need to set to prod url
         NODE_ENV: production
         DB_TYPE: fs
         DOCKER: "true"
+        FS_DIRECTORY: "files/"
         DISABLE_EMAIL_VERIFICATION: "true"
         DISABLE_STORAGE: "true"
         MONGODB_URL: $MONGO_URI
