--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
         - PROXY
         - NO_PROXY
         - NPM_REGISTRY
-    environment: 
+    environment:
+      - HOST
       - NODE_ENV
       - DB_TYPE
       - DOCKER
@@ -22,12 +23,14 @@ services:
       - PASSWORD_COOKIE
     ports: 
       - $PORT:8080
+    volumes:
+      - $FS_DIRECTORY:$FS_DIRECTORY
     mem_limit: 1g
     logging: 
       driver: 'fluentd'
       options: 
         fluentd-async-connect: "true"
         fluentd-address: $HOST:24224
-        tag: docker.seo
+        tag: docker.dam
     network_mode: bridge
     restart: always
