--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - NODE_ENV
       - DB_TYPE
       - DOCKER
+      - FS_DIRECTORY
       - DISABLE_EMAIL_VERIFICATION
       - DISABLE_STORAGE
       - MONGODB_URL
