--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,9 +47,9 @@ deploy to prod:
         DISABLE_EMAIL_VERIFICATION: "true"
         DISABLE_STORAGE: "true"
         MONGODB_URL: $MONGO_URI
-        PASSWORD_ACCESS: 3b0bc404c6c9e2e42aca5124ceac7fabe4c510468488817c6673c225eb74e44d
-        PASSWORD_REFRESH: 9107ca67682b1351fc6999a607ac24ea630f1b74f3377806ac369a6e27915ef0
-        PASSWORD_COOKIE: 3dfa1efde677748a589094cd71a0fd1eaa284bab7896fc9cc7b26f6f8e12fc4d
+        PASSWORD_ACCESS: $DAM_PASSWORD_ACCESS
+        PASSWORD_REFRESH: $DAM_PASSWORD_REFRESH
+        PASSWORD_COOKIE: $DAM_PASSWORD_COOKIE
     before_script:
         - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
